scrollbar missed character & -- fixed

--- a/style.scss
+++ b/style.scss
@@ -10,15 +10,15 @@ body {
   margin: 0;
 
   /* скролл бар ( стандартный бесит ) */
-  ::-webkit-scrollbar {
+  &::-webkit-scrollbar {
     width: 10px;
   }
 
-  ::-webkit-scrollbar-track {
+  &::-webkit-scrollbar-track {
     background: $bg-color;
   }
 
-  ::-webkit-scrollbar-thumb {
+  &::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 50%);
     border-radius: 20px;
     border: 3px solid whitesmoke;
